# wgpu_game_of_life

./: Cargo.toml  README.md
src/: bui_view.rs  game.rs  game_of_life.wgsl  lib.rs  main.rs  setup.rs
